--- a/CSS/style.css
+++ b/CSS/style.css
@@ -19,12 +19,17 @@ p{
    position: relative;
     float: right;
     width: 70px;
+    text-align: center;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-weight: bold;
+
 }
 .row{
     width: 100%;
 }
 #ch{
-    background-color: rgb(255, 100, 80);
+    background-color: rgb(155, 65, 53);
+    color: gainsboro;
 }
 #bee{
     background-color: rgb(112, 153, 153);
