--- a/CSS/style.css
+++ b/CSS/style.css
@@ -19,7 +19,7 @@ p{
    position: relative;
     float: right;
     width: 70px;
-    text-align: center;
+    text-align: centergit ;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-weight: bold;
 
