--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,6 +1,9 @@
+
+
 h1{
     color: blue;
    text-align: center;
+   text-shadow: 2px 2px #9893eb;
 }
 
 p{
@@ -29,16 +32,19 @@ p{
 }
 #ch{
     background-color: rgb(155, 65, 53);
+    box-shadow: -1px 1px 1px rgb(58, 12, 12);
     color: gainsboro;
 }
 #bee{
     background-color: rgb(112, 153, 153);
+    box-shadow: -1px 1px 1px rgb(70, 100, 100);
 }
 #su{
     background-color: rgb(117, 148, 64);
+    box-shadow: -1px 1px 1px rgb(70, 85, 44);
 }
 
-@media(min-width: 1200px){.col-lg-4{
+/*@media(min-width: 1200px){.col-lg-4{
     float:left;
     border: 1px solid black;
     background-color: grey;
@@ -79,5 +85,109 @@ p{
     }
     col-sm-12{
         width: 100%;
+    }
+}*/
+
+.divborder{
+    border: 1px solid rgb(0, 0, 0);
+   
+    margin-bottom: 5px;
+    background-color: grey;
+    box-shadow: 5px 5px 5px grey;
+}
+.bg-color{
+    background-color: lightblue;
+}
+
+
+#logo-div{
+    /*background: url("../IMG/favicon-32x32.png")no-repeat;*/
+    height: 50px;
+    width: 50px;
+    margin-top: 20px;
+    border-radius: 50%;
+    border: lightslategray solid 2px;
+    align-items: center;
+
+}
+#logo-img{
+    height: 46px;
+    width: 46px;
+}
+a.nav-link{
+    text-align: right;
+}
+
+nav{
+    box-shadow: rgb(96, 101, 105) 10px 5px 10px;
+}
+.jumbotron{
+    background: url("../IMG/jumbotron-img.jpg") no-repeat;
+    height: 400px;
+    width: 100%;
+    background-position: center;
+    opacity: .7;
+}
+
+#menu-tile, #special,#map{
+    position: relative;
+    height: 250px;
+    width: 100%;
+    align-content: center;
+    border: indigo 1px solid;
+    background-position: center;
+    margin-bottom: 10px;
+    overflow: hidden;
+    
+
+}
+#menu-tile{
+    background: url('../IMG/tile-1-sm.jpg') no-repeat;
+    
+    
+}
+#special{
+    background: url('../IMG/tile-2-sm.jpg') no-repeat;
+    
+}
+#map{
+    background: url('../IMG/tile-2.jpg') no-repeat;
+    
+}
+#menu-tile:hover, #special:hover, #map:hover{
+    box-shadow: lightgray 5px 5px 5px;
+}
+
+#menu-tile span, #special span, #map span{
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    height: 40px;
+    text-align: center;
+    background-color: rgb(0, 47, 255);
+    opacity: 50%;
+    color: rgb(255, 255, 255);
+    width: 100%;
+    font-size: 18px;
+    font-weight: 500;
+    text-transform: uppercase;
+}
+
+@media(max-width: 767px){
+    #menu-tile, #special,#map{
+        width: 608px;
+        margin: 0 auto auto;
+        margin-bottom: 15px;
+       
+    }
+    
+}
+
+@media(max-width: 479px){
+    #menu-tile, #special,#map{
+        width: 400px;
+        margin: 0 auto auto;
+        margin-bottom: 15px;
+        
     }
 }
