--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,8 +1,11 @@
 
+body{
+background-color: lightcyan;
+}
 
 h1{
     color: blue;
-   text-align: center;
+  /* text-align: center;*/
    text-shadow: 2px 2px #9893eb;
 }
 
@@ -95,6 +98,11 @@ p{
     background-color: grey;
     box-shadow: 5px 5px 5px grey;
 }
+.divborder p{
+    padding-right:5px;
+
+    
+}
 .bg-color{
     background-color: lightblue;
 }
@@ -115,9 +123,13 @@ p{
     width: 46px;
 }
 a.nav-link{
-    text-align: right;
+    text-align: center;
 }
-
+    .btn_nav{
+    width: 100%;
+    background-color: lavender;
+    border: 1px black solid;
+}
 nav{
     box-shadow: rgb(96, 101, 105) 10px 5px 10px;
 }
@@ -125,7 +137,7 @@ nav{
     background: url("../IMG/jumbotron-img.jpg") no-repeat;
     height: 400px;
     width: 100%;
-    background-position: center;
+   /* background-position: center;*/
     opacity: .7;
 }
 
@@ -143,6 +155,7 @@ nav{
 }
 #menu-tile{
     background: url('../IMG/tile-1-sm.jpg') no-repeat;
+    
     
     
 }
@@ -172,7 +185,34 @@ nav{
     font-weight: 500;
     text-transform: uppercase;
 }
-
+.div1, .div2, .div3{
+    height: 300px;
+    margin-bottom: 20px;
+}
+.div1{
+    background-color: #43658b;
+}
+.div2{
+    background-color: #4e89ae;
+}
+.div3{
+    background-color: #f7d6bf;
+}
+.divborder span{
+    position: absolute;
+    bottom: 15px;
+    right: 0;
+    height: 40px;
+    text-align: center;
+    width: 100%;
+    font-size: 18px;
+    font-weight: 500;
+}
+.divborder a{
+    position: absolute;
+    bottom: -20px;
+    right: 0px;
+}
 @media(max-width: 767px){
     #menu-tile, #special,#map{
         width: 608px;
@@ -180,14 +220,24 @@ nav{
         margin-bottom: 15px;
        
     }
+    .divborder.div1, .divborder.div2, .divborder.div3{
+        margin-top: 50px;
+    }
     
 }
-
+@media(max-width: 889px){
+    .divborder.div1, .divborder.div2, .divborder.div3{
+        margin-top: 50px;
+    } 
+}
 @media(max-width: 479px){
     #menu-tile, #special,#map{
         width: 400px;
         margin: 0 auto auto;
         margin-bottom: 15px;
         
+    }
+    .divborder.div1, .divborder.div2, .divborder.div3{
+        margin-top: 50px;
     }
 }
